# oped-game-v2

./: README.md
Client/: Cargo.toml  answer-only.html  index.html
Client/src/: lib.rs
server/: Cargo.toml
server/src/: get_anime.rs  main.rs
