[package]
name = "webassembly-oped-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.2"
crossbeam-channel = "0.5.2"
async-channel = "1.7.1"
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.17"
futures-util = "0.3.21"
env_logger = "0.9.0"
serde = "1.0.142"
xml-rs = "0.8.4"
soup = "0.5.1"
animethemes-rs = "0.4.4"
rand = "0.8.5"
crossfire = "0.1.7"
async-recursion = "1.0.0"